@@ -1,3 +1,8 @@
+2002-02-27 00:00
+ Result:
+  - Full test coverage
+ Test12:
+  - Created
 2002-02-26 23:00
  Result:
   - Extended test coverage to metadata queries
